# SqlRagApp

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
RAG/: .gitignore  LICENSE  main.py  pdf_loader.py  pyproject.toml  rag_engine.py  test_api.py  test_groq.py
RAG/notebook/: pdf_loader.ipynb
data/vector_store/: chroma.sqlite3
frontend/: components.json  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ColorBends.css  DashboardHome.jsx  DataManager.jsx  Header.jsx  HistoryLog.jsx  LoadingSpinner.jsx  LoginPage.jsx  QueryEditor.jsx  QuestionInput.jsx  ResultsPanel.jsx  SchemaManager.jsx  SettingsPage.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
notebook/: document.ipynb
sql/: api.py  app.py  db_executor.py  db_setup.py  ecommerce.db  schema_parser.py
