[project]
name = "snboseproject"
version = "0.1.0"
description = "Text-to-SQL RAG Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.137.1",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.2",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.38",
    "python-dotenv>=1.2.2",
    "pyjwt>=2.10.1",
    "pydantic>=2.10.6",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]
